--- a/src/CountriesList.css
+++ b/src/CountriesList.css
@@ -1,6 +1,14 @@
-.Countries__Container {
-    margin: 3em auto;
+.countries__container {
+    width: 90%;
+    margin: auto;
     display: flex;
-    justify-content: center;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
+}
+
+@media (max-width: 700px) {
+    .countries__container {
+        width: 100%;
+        justify-content: center;
+    }
 }
